--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,6 @@ opacity: 1; /* Make the active image visible */
 
 .card .card-image {
   margin-top: 30px;
-  max-width: 40%;
   height: auto;
   border-radius: 50%;
   margin-bottom: 10px;
@@ -364,6 +363,10 @@ background-color: #5e3236;
 
 
 @media (max-width: 820px) {
+
+  .card-image {
+    width: 180px;
+  }
   
   .header-title {
       font-size: 40px;
