--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   font-family: "Ubuntu", serif;
   margin: 0;
-  background: #904E55;
+  background: url("./assets/christmas-patterns-multi-2.png") no-repeat center center fixed; /* Use the image */
+  background-size: cover; /* Ensures the image covers the entire background */
   display: flex;
   justify-content: center;
   align-items: center;
