implemented functionality of the contact form

--- a/src/index.css
+++ b/src/index.css
@@ -394,7 +394,7 @@ background-color: #5e3236;
 
   .profile-pic {
       width: 220px; /* Resize the image */
-      height: 220px; /* Maintain aspect ratio */
+      height: 220px; /* Maintain aspect ratio this is a sample*/ 
       margin-bottom: 50px;
 
   }
